crates/termlens/tests/snapshots/snapshot_macro__a_screen_is_recorded_as_it_is_and_refuses_a_wait-2.snap
---
source: crates/termlens/tests/snapshot_macro.rs
expression: __screen
---
size: 30x3  cursor: 0,5
fixed
