crates/termlens/tests/snapshots/snapshot_macro__a_terminal_is_settled_and_snapshotted_with_styles-2.snap
---
source: crates/termlens/tests/snapshot_macro.rs
expression: __screen
---
size: 30x3  cursor: 0,11
Ready later
